[package]
name = "hilbert_image_to_sound"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["hilbert", "curve", "research", "image", "sound"]
description = "A library for turning images into sound using Hilbert space-filling curves"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/hilbert_image_to_sound.git"
homepage = "https://github.com/advancedresearch/hilbert_image_to_sound"

[dependencies]
image = "0.23.0"
cpal = "0.11.0"
hilbert_curve = "0.2.0"
